--- a/java/idea-ui/src/com/intellij/ide/util/newProjectWizard/ProjectNameWithModuleStep.form
+++ b/java/idea-ui/src/com/intellij/ide/util/newProjectWizard/ProjectNameWithModuleStep.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.intellij.ide.util.newProjectWizard.ProjectNameWithTypeStep">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.intellij.ide.util.newProjectWizard.ProjectNameWithModuleStep">
   <grid id="807b" binding="myModulePanel" layout-manager="GridBagLayout">
     <constraints>
       <xy x="20" y="20" width="707" height="453"/>
